--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -29,6 +29,7 @@
     "css-loader": "0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^6.1.1",
     "moment": "2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "7.0.0",
@@ -42,6 +43,8 @@
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.1",
     "redux": "3.7.2",
+    "redux-mock-store": "^1.5.3",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
@@ -49,6 +52,8 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "^3.3.5",
