--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase": "^6.1.1",
+    "history": "^4.9.0",
     "moment": "2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "7.0.0",
